[package]
name = "tesla"
version = "0.2.2"
authors = ["Ze'ev Klapow <zklapow@gmail.com>"]
edition = "2018"
repository = "https://github.com/zklapow/tesla-rs"
keywords = ["tesla", "api"]
categories = ["api-bindings"]
license = "MIT"
description = "A simple client library for interacting with the Tesla owner API"

[dependencies]
http = "0.2.4"
serde = { version = "~1.0", features = ["derive"] }
reqwest = { version = "0.11.3", features = ["json", "blocking"] }
