[package]
name = "teslac"
version = "0.2.0"
authors = ["Ze'ev Klapow <zklapow@gmail.com>"]
edition = "2018"
repository = "https://github.com/zklapow/tesla-rs"
keywords = ["tesla", "api"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
tesla = { path = "../tesla", version = "0.2"}
toml = "0.5.8"
serde = "1.0.125"
dirs = "2.0"
clap = "~2.33"
flexi_logger = "0.17.1"
log = "0.4.14"
ctrlc = "3.1.9"
rpassword = "5.0.1"
influx_db_client = { git="https://github.com/zklapow/InfluxDBClient-rs", optional = true }
snafu = { version = "0.6.10", optional = true }
rusqlite = {version = "0.25", features = ["bundled"], optional = true}
rumqttc = {version = "0.12", optional = true}
serde_json = {version = "1.0", optional = true}

[features]
default = ["sqlite", "mqtt"]
sqlite = ["dep:rusqlite"]
mqtt = ["dep:rumqttc", "dep:serde_json"]
influxdb = ["dep:influx_db_client", "dep:snafu"]